Fix Code Block from being too wide

--- a/themes/hello-friend-ng/assets/scss/_normalize.scss
+++ b/themes/hello-friend-ng/assets/scss/_normalize.scss
@@ -79,7 +79,8 @@ hr {
 pre {
   font-family: monospace, monospace; /* 1 */
   font-display: auto;
-  font-size: 1em; /* 2 */
+  font-size: 1em;
+  max-width: 100vh;
 }
 
 /* Text-level semantics
